# rotterdam

./: .gitignore  COPYRIGHT.txt  Cargo.toml  rotterdam-debug.do
.github/workflows/: build.yml
ci/: acceptance-tests.sh  build.sh  lint.sh  tests.sh
smtr/: Cargo.toml  LICENSE-MIT
smtr/ci/: acceptance-tests.sh
smtr/examples/: echo-server.rs
smtr/src/: lib.rs  server.rs
smtr/src/server/: mod.rs
smtr/test-cases/: test-get-headers.request  test-get.request  test-post-body.request  verify.py
src/: app.rs  config.rs  git_cgi.rs  lib.rs  main.rs
src/http/: mod.rs  server.rs
test-rotterdam/: Cargo.toml  rotterdam-bin  rotterdam-bin.do  verify.do
test-rotterdam/src/: main.rs
test-rotterdam/test-data/.cargo/: config.toml
test-rotterdam/tests/create-repo/: dependent-Cargo.toml  lib.rs  library-Cargo.toml  server-config.toml
