[package]
name = "rotterdam"
version = "0.1.0"
authors = ["James Elford <james.p.elford@gmail.com>"]
edition = "2018"
publish = ["my-registry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
smtr = { path = "./smtr" }


[workspace]
members = [
    "smtr",
    "."
]