[package]
name = "rotterdam"
version = "0.1.0"
authors = ["James Elford <james.p.elford@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
smtr = { path = "./smtr" }
clap = "2"
libc = "0.2"
log = "0.4"
pretty_env_logger = "0.4"


[workspace]
members = [
    "smtr",
    ".",
    "test-rotterdam",
]
