[package]
name = "test-rotterdam"
version = "0.1.0"
authors = ["James Elford <james.p.elford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
ureq = { version = "2", features = ["json"] }
json = "0.12"
log = "0.4"

